--- a/unit01-ml-intro/exercises/2_random-weights/exercise_2_random-weights.ipynb
+++ b/unit01-ml-intro/exercises/2_random-weights/exercise_2_random-weights.ipynb
@@ -653,10 +653,7 @@
    "source": [
     "ppn = Perceptron(num_features=2)\n",
     "\n",
-    "train(model=ppn, all_x=X_train, all_y=y_train, epochs=5)\n",
-    "\n",
-    "# The perceptron trains better, it reached 0 errors in 3 epochs\n",
-    "# while it took 4 epochs with the weights and bias initialized at 0.\n"
+    "train(model=ppn, all_x=X_train, all_y=y_train, epochs=5)"
    ],
    "outputs": [
     {
@@ -682,6 +679,15 @@
     "\n",
     "<font color='red'>What do you observe, does the perceptron train better or worse?</font>"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "The perceptron trains better. It reached 0 errors in 3 epochs while it took\n",
+    "4 epochs with the weights and bias initialized to 0."
+   ],
+   "id": "ed2ee9b73f35f154"
   },
   {
    "cell_type": "markdown",
