--- a/unit02-pytorch-tensors/exercises/1_torch-where/exercise_1_torch-where.ipynb
+++ b/unit02-pytorch-tensors/exercises/1_torch-where/exercise_1_torch-where.ipynb
@@ -18,13 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "be1f5a9a-b3ee-424b-ab02-4371f49bd786",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-12T06:31:29.936291Z",
+     "start_time": "2025-02-12T06:31:29.931165Z"
+    }
+   },
    "source": [
     "# !conda install numpy pandas matplotlib --yes"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -42,9 +47,7 @@
    "id": "5027ab52-b658-4c47-ae3e-c3b7b112a4e3",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# !pip install torch"
-   ]
+   "source": "# !pip install torch"
   },
   {
    "cell_type": "code",
@@ -530,10 +533,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
    "id": "3bb0693b-85c2-4834-8a3f-591e464abc7c",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-12T06:38:27.511771Z",
+     "start_time": "2025-02-12T06:38:27.503658Z"
+    }
+   },
    "source": [
     "class Perceptron:\n",
     "    def __init__(self, num_features):\n",
@@ -544,10 +550,7 @@
     "    def forward(self, x):\n",
     "        weighted_sum_z = torch.dot(x, self.weights) + self.bias\n",
     "\n",
-    "        if weighted_sum_z > 0.:\n",
-    "            prediction = torch.tensor(1.)\n",
-    "        else:\n",
-    "            prediction = torch.tensor(0.)\n",
+    "        prediction = torch.where(weighted_sum_z > 0., 1., 0.)\n",
     "\n",
     "        return prediction\n",
     "\n",
@@ -560,7 +563,9 @@
     "        self.weights += error * x\n",
     "\n",
     "        return error"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
