--- a/unit02-pytorch-tensors/exercises/2_perceptron-matmul/exercise_2_perceptron-matmul.ipynb
+++ b/unit02-pytorch-tensors/exercises/2_perceptron-matmul/exercise_2_perceptron-matmul.ipynb
@@ -115,10 +115,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
    "id": "cdb04e07-8772-410b-ba42-c390bbcd091b",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-12T06:42:27.209554Z",
+     "start_time": "2025-02-12T06:42:27.203992Z"
+    }
+   },
    "source": [
     "class Perceptron:\n",
     "    def __init__(self):\n",
@@ -126,8 +129,13 @@
     "        self.bias = torch.tensor(-3.0)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        ### YOUR CODE ###"
-   ]
+    "        weighted_sum_z = torch.matmul(x, self.weights) + self.bias\n",
+    "        prediction = torch.where(weighted_sum_z > 0, 1.0, 0.0)\n",
+    "\n",
+    "        return prediction"
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
