--- a/unit03-pytorch-training/exercises/solutions/unit03_exercise_2/solution_ex_2.ipynb
+++ b/unit03-pytorch-training/exercises/solutions/unit03_exercise_2/solution_ex_2.ipynb
@@ -66,30 +66,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "id": "3822a1f2-6b48-4826-9bf4-adbe06c65a37",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T04:05:59.562812Z",
+     "start_time": "2025-02-19T04:05:58.090310Z"
+    }
+   },
+   "source": [
+    "%load_ext watermark\n",
+    "%watermark -v -p numpy,pandas,matplotlib,torch"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Python implementation: CPython\n",
-      "Python version       : 3.9.7\n",
-      "IPython version      : 8.0.1\n",
+      "Python version       : 3.12.0\n",
+      "IPython version      : 8.31.0\n",
       "\n",
-      "numpy     : 1.22.1\n",
-      "pandas    : 1.4.2\n",
-      "matplotlib: 3.5.2\n",
-      "torch     : 1.12.1\n",
+      "numpy     : 2.2.2\n",
+      "pandas    : 2.2.3\n",
+      "matplotlib: 3.10.0\n",
+      "torch     : 2.6.0\n",
       "\n"
      ]
     }
    ],
-   "source": [
-    "%load_ext watermark\n",
-    "%watermark -v -p numpy,pandas,matplotlib,torch"
-   ]
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -111,22 +116,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "id": "ab70cfad-f8bb-4076-b22e-dffa4f8a48fa",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T04:06:01.551876Z",
+     "start_time": "2025-02-19T04:06:01.548026Z"
+    }
+   },
    "source": [
     "import pandas as pd"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "id": "bb8965ae-5222-4541-a7c6-7a9aaa4d1033",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T04:06:02.822631Z",
+     "start_time": "2025-02-19T04:06:02.789589Z"
+    }
+   },
+   "source": [
+    "df = pd.read_csv(\"data_banknote_authentication.txt\", header=None)\n",
+    "df.head()"
+   ],
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "         0       1       2        3  4\n",
+       "0  3.62160  8.6661 -2.8073 -0.44699  0\n",
+       "1  4.54590  8.1674 -2.4586 -1.46210  0\n",
+       "2  3.86600 -2.6383  1.9242  0.10645  0\n",
+       "3  3.45660  9.5228 -4.0112 -3.59440  0\n",
+       "4  0.32924 -4.4552  4.5718 -0.98880  0"
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -197,14 +223,6 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "         0       1       2        3  4\n",
-       "0  3.62160  8.6661 -2.8073 -0.44699  0\n",
-       "1  4.54590  8.1674 -2.4586 -1.46210  0\n",
-       "2  3.86600 -2.6383  1.9242  0.10645  0\n",
-       "3  3.45660  9.5228 -4.0112 -3.59440  0\n",
-       "4  0.32924 -4.4552  4.5718 -0.98880  0"
       ]
      },
      "execution_count": 6,
@@ -212,21 +230,23 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df = pd.read_csv(\"data_banknote_authentication.txt\", header=None)\n",
-    "df.head()"
-   ]
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
    "id": "860304f1-1b8c-4993-b547-20e2dcceb03b",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T04:06:05.372422Z",
+     "start_time": "2025-02-19T04:06:05.351722Z"
+    }
+   },
    "source": [
     "X_features = df[[0, 1, 2, 3]].values\n",
     "y_labels = df[4].values"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -238,9 +258,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
    "id": "6f342b22-0fde-436a-a121-00e9ce627512",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T04:06:06.561146Z",
+     "start_time": "2025-02-19T04:06:06.554441Z"
+    }
+   },
+   "source": [
+    "X_features.shape"
+   ],
    "outputs": [
     {
      "data": {
@@ -253,9 +280,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "X_features.shape"
-   ]
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -267,9 +292,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
    "id": "1e8247a8-101d-4195-84d3-12b6593c0099",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T04:06:07.661797Z",
+     "start_time": "2025-02-19T04:06:07.658355Z"
+    }
+   },
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.bincount(y_labels)"
+   ],
    "outputs": [
     {
      "data": {
@@ -282,11 +316,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "np.bincount(y_labels)"
-   ]
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -306,10 +336,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
    "id": "fa4ba92f-f294-4572-8aa2-d2fa50788a9d",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T04:06:09.376934Z",
+     "start_time": "2025-02-19T04:06:09.356367Z"
+    }
+   },
    "source": [
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
@@ -327,7 +360,9 @@
     "\n",
     "    def __len__(self):\n",
     "        return self.labels.shape[0]"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -339,9 +374,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
    "id": "f8bbd768-c15c-40f5-8500-83fad5bb1722",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T04:06:12.086546Z",
+     "start_time": "2025-02-19T04:06:12.083250Z"
+    }
+   },
+   "source": [
+    "train_size = int(X_features.shape[0]*0.80)\n",
+    "train_size"
+   ],
    "outputs": [
     {
      "data": {
@@ -354,16 +397,21 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "train_size = int(X_features.shape[0]*0.80)\n",
-    "train_size"
-   ]
+   "execution_count": 11
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
    "id": "0b09d3d5-f4f7-47df-8160-8d883c0c5e19",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T04:06:13.793362Z",
+     "start_time": "2025-02-19T04:06:13.786513Z"
+    }
+   },
+   "source": [
+    "val_size = X_features.shape[0] - train_size\n",
+    "val_size"
+   ],
    "outputs": [
     {
      "data": {
@@ -376,10 +424,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "val_size = X_features.shape[0] - train_size\n",
-    "val_size"
-   ]
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -391,10 +436,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
    "id": "22a0e19a-de40-4309-b197-368a781a5633",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T04:06:15.163897Z",
+     "start_time": "2025-02-19T04:06:15.153574Z"
+    }
+   },
    "source": [
     "import torch\n",
     "\n",
@@ -414,7 +462,9 @@
     "    batch_size=10,\n",
     "    shuffle=False,\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -436,10 +486,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
    "id": "b6913a35-3222-463b-8c6f-a52a852ec3f1",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T04:06:17.753287Z",
+     "start_time": "2025-02-19T04:06:17.732647Z"
+    }
+   },
    "source": [
     "train_mean = torch.zeros(X_features.shape[1])\n",
     "\n",
@@ -453,13 +506,23 @@
     "    train_std += ((x - train_mean)**2).sum(dim=0)\n",
     "\n",
     "train_std = torch.sqrt(train_std / (len(train_set)-1))"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 14
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
    "id": "b04ce773-cf79-4ee6-b9aa-daf2b5614f3f",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T04:06:19.932707Z",
+     "start_time": "2025-02-19T04:06:19.924126Z"
+    }
+   },
+   "source": [
+    "print(\"Feature means:\", train_mean)\n",
+    "print(\"Feature std. devs:\", train_std)"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -470,10 +533,7 @@
      ]
     }
    ],
-   "source": [
-    "print(\"Feature means:\", train_mean)\n",
-    "print(\"Feature std. devs:\", train_std)"
-   ]
+   "execution_count": 15
   },
   {
    "cell_type": "markdown",
@@ -487,10 +547,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
    "id": "21c5bdab-23c2-47b5-b6bb-65b63ab636d8",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T04:06:21.552400Z",
+     "start_time": "2025-02-19T04:06:21.536597Z"
+    }
+   },
    "source": [
     "all_x = []\n",
     "for x, y in train_loader:\n",
@@ -498,13 +561,23 @@
     "    \n",
     "train_std = torch.concat(all_x).std(dim=0)\n",
     "train_mean = torch.concat(all_x).mean(dim=0)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 16
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
    "id": "f4843bdf-d993-48af-82d7-2f072e3553a1",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T04:06:23.043830Z",
+     "start_time": "2025-02-19T04:06:23.033444Z"
+    }
+   },
+   "source": [
+    "print(\"Feature means:\", train_mean)\n",
+    "print(\"Feature std. devs:\", train_std)"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -515,10 +588,7 @@
      ]
     }
    ],
-   "source": [
-    "print(\"Feature means:\", train_mean)\n",
-    "print(\"Feature std. devs:\", train_std)"
-   ]
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -530,14 +600,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
    "id": "200d3b72-0ee6-492a-8ef1-72fb856e44b3",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T04:06:24.480014Z",
+     "start_time": "2025-02-19T04:06:24.476714Z"
+    }
+   },
    "source": [
     "def standardize(df, train_mean, train_std):\n",
     "    return (df - train_mean) / train_std"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 18
   },
   {
    "cell_type": "markdown",
@@ -557,10 +632,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
    "id": "3da86d9a-7cd5-467c-bf65-3388fe272bd5",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T04:06:26.312311Z",
+     "start_time": "2025-02-19T04:06:26.308986Z"
+    }
+   },
    "source": [
     "import torch\n",
     "\n",
@@ -574,7 +652,9 @@
     "        logits = self.linear(x)\n",
     "        probas = torch.sigmoid(logits)\n",
     "        return probas"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 19
   },
   {
    "cell_type": "markdown",
@@ -596,29 +676,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
    "id": "79c712f6-4e2a-43e9-8563-215f88beb4a8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 001/002 | Batch 000/110 | Loss: 0.93\n",
-      "Epoch: 001/002 | Batch 020/110 | Loss: 0.08\n",
-      "Epoch: 001/002 | Batch 040/110 | Loss: 0.23\n",
-      "Epoch: 001/002 | Batch 060/110 | Loss: 0.05\n",
-      "Epoch: 001/002 | Batch 080/110 | Loss: 0.03\n",
-      "Epoch: 001/002 | Batch 100/110 | Loss: 0.05\n",
-      "Epoch: 002/002 | Batch 000/110 | Loss: 0.13\n",
-      "Epoch: 002/002 | Batch 020/110 | Loss: 0.02\n",
-      "Epoch: 002/002 | Batch 040/110 | Loss: 0.21\n",
-      "Epoch: 002/002 | Batch 060/110 | Loss: 0.08\n",
-      "Epoch: 002/002 | Batch 080/110 | Loss: 0.07\n",
-      "Epoch: 002/002 | Batch 100/110 | Loss: 0.07\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T04:06:29.823790Z",
+     "start_time": "2025-02-19T04:06:28.996105Z"
     }
-   ],
+   },
    "source": [
     "import torch.nn.functional as F\n",
     "\n",
@@ -648,7 +712,28 @@
     "            print(f'Epoch: {epoch+1:03d}/{num_epochs:03d}'\n",
     "                   f' | Batch {batch_idx:03d}/{len(train_loader):03d}'\n",
     "                   f' | Loss: {loss:.2f}')"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 001/002 | Batch 000/110 | Loss: 0.93\n",
+      "Epoch: 001/002 | Batch 020/110 | Loss: 0.08\n",
+      "Epoch: 001/002 | Batch 040/110 | Loss: 0.23\n",
+      "Epoch: 001/002 | Batch 060/110 | Loss: 0.05\n",
+      "Epoch: 001/002 | Batch 080/110 | Loss: 0.03\n",
+      "Epoch: 001/002 | Batch 100/110 | Loss: 0.05\n",
+      "Epoch: 002/002 | Batch 000/110 | Loss: 0.13\n",
+      "Epoch: 002/002 | Batch 020/110 | Loss: 0.02\n",
+      "Epoch: 002/002 | Batch 040/110 | Loss: 0.21\n",
+      "Epoch: 002/002 | Batch 060/110 | Loss: 0.08\n",
+      "Epoch: 002/002 | Batch 080/110 | Loss: 0.07\n",
+      "Epoch: 002/002 | Batch 100/110 | Loss: 0.07\n"
+     ]
+    }
+   ],
+   "execution_count": 20
   },
   {
    "cell_type": "markdown",
@@ -670,10 +755,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
    "id": "4b6473aa-98ac-4ffe-84b5-cb5a2d511018",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T04:06:33.931092Z",
+     "start_time": "2025-02-19T04:06:33.916856Z"
+    }
+   },
    "source": [
     "def compute_accuracy(model, dataloader):\n",
     "\n",
@@ -695,15 +783,24 @@
     "        total_examples += len(compare)\n",
     "\n",
     "    return correct / total_examples"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 21
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
    "id": "2c4e70f5-0fbd-4782-a7b0-75c687c5b6d9",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "end_time": "2025-02-19T04:06:35.619509Z",
+     "start_time": "2025-02-19T04:06:35.604165Z"
+    }
    },
+   "source": [
+    "train_acc = compute_accuracy(model, train_loader)\n",
+    "print(f\"Accuracy: {train_acc*100:.2f}%\")"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -713,10 +810,7 @@
      ]
     }
    ],
-   "source": [
-    "train_acc = compute_accuracy(model, train_loader)\n",
-    "print(f\"Accuracy: {train_acc*100:.2f}%\")"
-   ]
+   "execution_count": 22
   },
   {
    "cell_type": "markdown",
@@ -728,24 +822,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
    "id": "7edead56-db64-4667-8007-937ab1974ac0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 98.18%\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T04:06:38.951285Z",
+     "start_time": "2025-02-19T04:06:38.943645Z"
     }
-   ],
+   },
    "source": [
     "## SOLUTION\n",
     "\n",
     "val_acc = compute_accuracy(model, val_loader)\n",
     "print(f\"Accuracy: {val_acc*100:.2f}%\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 80.36%\n"
+     ]
+    }
+   ],
+   "execution_count": 23
   },
   {
    "cell_type": "markdown",
@@ -757,10 +856,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
    "id": "8ce2b953-b4d4-42fd-904f-c4effcc1789c",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-19T04:06:43.852458Z",
+     "start_time": "2025-02-19T04:06:43.848756Z"
+    }
+   },
    "source": [
     "## SOLUTION\n",
     "\n",
@@ -785,7 +887,9 @@
     "        total_examples += len(compare)\n",
     "\n",
     "    return correct / total_examples"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 25
   },
   {
    "cell_type": "code",
